Much more work in progress...

--- a/source/Octopus.TenantMigrator/packages.config
+++ b/source/Octopus.TenantMigrator/packages.config
@@ -3,7 +3,7 @@
   <package id="Autofac" version="4.0.0" targetFramework="net451" />
   <package id="GitVersionTask" version="3.6.2" targetFramework="net451" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net451" />
-  <package id="Octopus.Client" version="3.4.0-unstable2424" targetFramework="net451" />
+  <package id="Octopus.Client" version="3.4.0" targetFramework="net451" />
   <package id="Serilog" version="1.5.14" targetFramework="net451" />
   <package id="Serilog.Extras.Timing" version="2.0.2" targetFramework="net451" />
   <package id="Serilog.Sinks.Literate" version="1.2.0" targetFramework="net451" />
