--- a/source/Octopus.TenantMigrator/Octopus.TenantMigrator.csproj
+++ b/source/Octopus.TenantMigrator/Octopus.TenantMigrator.csproj
@@ -46,9 +46,8 @@
       <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Octopus.Client, Version=3.4.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Octopus.Client.3.4.0-unstable2424\lib\net40\Octopus.Client.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="Octopus.Client">
+      <HintPath>..\packages\Octopus.Client.3.4.0\lib\net40\Octopus.Client.dll</HintPath>
     </Reference>
     <Reference Include="Serilog, Version=1.5.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
       <HintPath>..\packages\Serilog.1.5.14\lib\net45\Serilog.dll</HintPath>
